# C-2D-game

./: CMakeLists.txt  Character.cpp  Character.h  Game.cpp  Game.h  GameStates.h  HUD.cpp  HUD.h  Menu.cpp  Menu.h  Zeszyt1.prn  Zeszyt1.txt  character.cpp  character.h  chooseSave.cpp  chooseSave.h  game.cpp  game.h  main.cpp  mainMenu.cpp  mainMenu.h  map.txt  projectile.cpp  projectile.h  save.cpp  save.h  saveDialog.h  tile.cpp  tile.h  world.cpp  world.h
Characters/: Boss.cpp  Boss.h  Casual.cpp  Casual.h  Enemy.cpp  Enemy.h  Fatman.cpp  Fatman.h  Speedy.cpp  Speedy.h  eType.h  projectile.cpp  projectile.h
Characters/player/: Character.cpp  Character.h
Enemy/: Boss.cpp  Boss.h  Casual.cpp  Casual.h  Enemy.cpp  Enemy.h  Fatman.cpp  Fatman.h  Speedy.cpp  Speedy.h  enemy.cpp  enemy.h
Game/: GameStates.h  HUD.cpp  HUD.h  game.cpp  game.h  gameWon.cpp  gameWon.h  world.cpp  world.h
Menus/: Menu.cpp  Menu.h  mainMenu.cpp  mainMenu.h
Room/: Room.cpp  Room.h  tile.cpp  tile.h
maps/: backup.txt  map.txt  text.txt
resources/maps/: map.txt
resources/saves/: kochamwikunie  save  wikuniamaladnadupe
